--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ header {
     right: 0;
     background: var(--black);
     z-index: 1000;
-    padding: 2rem 9%;
+    padding: 1rem 7%;
     border-bottom: .1rem solid #fff3;
     display: flex;
     align-items: center;
@@ -63,7 +63,12 @@ header {
 header .logo {
     font-weight: bolder;
     color: #fff;
-    font-size: 2.5rem;
+    width: 170px;
+}
+
+header .logo img{
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -100,7 +105,7 @@ section {
 .home .content {
     padding-top: 5rem;
     width: 70rem;
-    margin: 0 auto;
+    margin: 5.5rem auto;
 }
 
 .home .content {
@@ -357,6 +362,7 @@ section {
     list-style: none;
     padding: 2rem 0;
     border-bottom: .1rem solid var(--red);
+    margin-bottom: 2rem;
 }
 
 .pricing .box-container .box ul li {
@@ -501,20 +507,27 @@ section {
     #menu-bar {
         display: block;
     }
+    
+    .fa-times {
+        transform: rotate(180deg);
+    }
 
     header .navbar {
         position: absolute;
-        top: 1;
+        top: 0;
         right: 0;
         left: 0;
         background: var(--black);
         border-top: 0.1rem solid #fff;
         padding: 1rem 2rem;
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        /* clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); */
+        display: none;
     }
 
-    header .navbar .nav-toggle {
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    .navbar.nav-toggle {
+        /* clip-path: polygon(0 0, 100% 0, 100% 0, 0 0); */
+        display: block;
+        top: 1;
     }
 
     header .navbar a {
@@ -530,8 +543,9 @@ section {
         color: var(--black);
     }
 
-    .fa-times {
-        transform: rotate(180deg);
+    
+    .home .content {
+        width: 90%;
     }
 
     .home .content h3 {
